--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -14,11 +14,11 @@
   <form id="loginForm">
     <div class="form-group">
       <label th:for="id">아이디</label>
-      <input type="text" id="id" class="form-control" placeholder="아이디를 입력하세요">
+      <input type="text" id="id" class="form-control" placeholder="아이디를 입력하세요" style="width: 50%">
     </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
-      <input type="password" id="password" class="form-control" placeholder="비밀번호를 입력하세요">
+      <input type="password" id="password" class="form-control" placeholder="비밀번호를 입력하세요" style="width: 50%">
     </div>
     <button type="button" class="btn btn-primary" onclick="login()">로그인</button>
   </form>
