feat: 기명 투표 기능 구현

--- a/src/main/resources/templates/content/home.html
+++ b/src/main/resources/templates/content/home.html
@@ -61,6 +61,11 @@
                     <div>
                         <span>[qr코드] </span><span th:text="${vote.qrId}"></span>
                     </div>
+                    <div>
+                        <a th:href="@{/vote/detail/{voteId}(voteId=${vote.voteId})}">
+                            <span>[자세히 보기]</span>
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
