feat: 회장직만 게시글 작성할 수 있도록 구현

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -13,10 +13,10 @@
       <div style="border-right: 1px solid white; padding: 0 10px">
         <a th:href="@{/home.do}">메인 페이지</a>
       </div>
-      <div style="border-right: 1px solid white; padding: 0 10px">
+      <div style="border-right: 1px solid white; padding: 0 10px" th:if="${session.loginMember.auth == 1}">
         <a th:href="@{/vote/create.do}">투표안건 만들기</a>
       </div>
-      <div style="border-right: 1px solid white; padding: 0 10px">
+      <div style="border-right: 1px solid white; padding: 0 10px" th:if="${session.loginMember.auth == 1}">
         <a th:href="@{/announce/create.do}">공지사항 만들기</a>
       </div>
     </div>
