feat: 대면일 경우 qr 코드 생성 및 qr링크를 통한 투표 기능 구현

--- a/src/main/resources/templates/vote/vote_detail.html
+++ b/src/main/resources/templates/vote/vote_detail.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Bootstrap JS and Popper.js -->
+
+<!--    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/header.css">
 </head>
 <body>
@@ -40,27 +42,31 @@
         <span>[기명/무기명] </span><span th:text="${vote.anonymityType}"></span>
     </div>
     <div>
-        <span>[qr코드] </span><span th:text="${vote.qrId}"></span>
-    </div>
-    <div>
         [ 총 유권자 수 ] 필요할듯
     </div>
     <div>
         [ 투표 진행율 ] 필요할듯
     </div>
+    <div>
+        [[${voteUrl}]]
+    </div>
 
 
     <!-- target대상만 볼 수 있음 -->
-    <div th:if="${isVoted == false && session.loginMember.deptName == vote.targetScope || session.loginMember.collegeName == vote.targetScope} ">
+    <div th:if="${vote.attendanceType == '비대면' && tisVoted == false && session.loginMember.deptName == vote.targetScope || session.loginMember.collegeName == vote.targetScope} ">
         <button id="voteButton">
             투표하기
         </button>
     </div>
-    <div th:if="${isVoted == true && session.loginMember.deptName == vote.targetScope || session.loginMember.collegeName == vote.targetScope} ">
+    <div th:if="${vote.attendanceType == '비대면' && isVoted == true && session.loginMember.deptName == vote.targetScope || session.loginMember.collegeName == vote.targetScope} ">
         <strong>투표를 완료하셨습니다.</strong>
     </div>
-    <div th:if="${session.loginMember.deptName != vote.targetScope || session.loginMember.collegeName != vote.targetScope} ">
+    <div th:if="${session.loginMember.deptName != vote.targetScope && session.loginMember.collegeName != vote.targetScope} ">
         <strong>투표 참여대상이 아닙니다.</strong>
+    </div>
+
+    <div th:if="${vote.attendanceType == '대면'}">
+        <strong>대면 투표일 경우 qr링크를 통해 투표에 참여할 수 있습니다.</strong>
     </div>
 
     <div class="modal" id="voteModal" tabindex="-1" role="dialog">
@@ -88,9 +94,46 @@
             </div>
         </div>
     </div>
+<!--     대면일 경우, 작성자일경우, 투표가 아직 안끝났을 경우-->
+    <div th:if="${session.loginMember.id == vote.id && vote.attendanceType == '대면'}">
+        <a th:href="@{/vote/createUrl/{voteId}(voteId=${vote.voteId})}" style="color: blue">
+            <span>qr코드 생성</span>
+        </a>
+    </div>
 
+    <div th:if="${voteUrl != 'http://localhost:8080/vote/detail/null'}">
+        <p>아래 QR 코드를 스캔하여 투표에 참여하세요.</p>
+
+        <!-- 투표 URL에 토큰이 포함되어 있으므로 이를 QR 코드로 표시 -->
+        <div th:id="qrcode" th:attr="data-vote-url=${voteUrl}">
+
+        </div>
+    </div>
 </div>
 <script>
+    var voteUrl = $('#qrcode').data('vote-url');
+    var qrcode = new QRCode(document.getElementById("qrcode"), {
+        text: voteUrl,
+        width: 128,
+        height: 128
+    });
+        // function generateQrCode(voteId) {
+        // // AJAX 요청을 통해 URL 생성 컨트롤러 호출
+        //     $.ajax({
+        //         type: 'GET',
+        //         url: '/vote/createUrl/' + voteId,
+        //         success: function(data) {
+        //             // URL 생성이 성공하면 리다이렉트
+        //             // window.location.href = data;
+        //             alert("qr코드가 생성되었습니다.");
+        //         },
+        //         error: function(error) {
+        //             console.error('Error generating QR code URL:', error);
+        //         }
+        //     });
+        // }
+
+
     document.getElementById('voteButton').addEventListener('click', function() {
         var myModal = new bootstrap.Modal(document.getElementById('voteModal'));
         myModal.show();
