--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
   <h1>로그인</h1>
-  <form id="loginForm">
+  <form id="loginForm" action="">
     <div class="form-group">
       <label th:for="id">아이디</label>
       <input type="text" id="id" class="form-control" placeholder="아이디를 입력하세요" style="width: 50%">
@@ -24,7 +24,12 @@
   </form>
   <br/>
 </div>
+
+</body>
+</html>
+
 <script>
+
   let loginAttempts = 0;
 
   function login() {
