--- a/src/main/resources/templates/vote/create_vote.html
+++ b/src/main/resources/templates/vote/create_vote.html
@@ -68,10 +68,10 @@
 <!--                </div>-->
 <!--            </div>-->
 
-            <div class="input_layout">
-                <label for="qrId">QR 코드 연결 ID</label>
-                <input type="text" id="qrId" name="qrId" th:field="*{qrId}">
-            </div>
+<!--            <div class="input_layout">-->
+<!--                <label for="qrId">QR 코드 연결 ID</label>-->
+<!--                <input type="text" id="qrId" name="qrId" th:field="*{qrId}">-->
+<!--            </div>-->
             <button type="submit">투표 안건 생성</button>
         </form>
 
