--- a/src/main/resources/templates/vote/vote_detail_tact.html
+++ b/src/main/resources/templates/vote/vote_detail_tact.html
@@ -25,7 +25,7 @@
     <span>[내용] </span><span th:text="${vote.content}"></span>
   </div>
   <div>
-    <span>[작성자] </span><span th:text="${vote.id}"></span>
+    <span>[작성자] </span><span th:text="${vote.name}"></span>
   </div>
   <div>
     <span>[투표 기간] </span>
