--- a/src/main/resources/templates/content/home.html
+++ b/src/main/resources/templates/content/home.html
@@ -23,7 +23,6 @@
             padding: 10px;
         }
 
-        /* 필요에 따라 더 많은 스타일을 추가할 수 있습니다. */
     </style>
 </head>
 <body>
@@ -36,10 +35,10 @@
         <div style="padding-bottom: 30px">
             <ul th:if="${voteList != null}">
                 <li th:each="vote : ${voteList}" style="border-bottom: 1px solid red; margin-bottom: 10px;padding-bottom: 10px">
-                    <a th:href="@{/vote/update/{voteId}(voteId=${vote.voteId})}">
+                    <a th:if="${vote.id == session.loginMember.id}" th:href="@{/vote/update/{voteId}(voteId=${vote.voteId})}">
                         수정
                     </a>
-                    <a th:href="@{/vote/delete/{voteId}(voteId=${vote.voteId})}">
+                    <a th:if="${vote.id == session.loginMember.id}" th:href="@{/vote/delete/{voteId}(voteId=${vote.voteId})}">
                         삭제
                     </a>
                     <div>
