--- a/src/main/resources/templates/announce/announce_detail.html
+++ b/src/main/resources/templates/announce/announce_detail.html
@@ -11,6 +11,7 @@
 <body>
 <div th:replace="layout/header :: header"></div>
 <div th:if="${announce != null}">
+
     <div>
         <span>[공지사항 제목]</span><span th:text="${announce.annTitle}"></span>
     </div>
@@ -23,8 +24,12 @@
     <div>
         <span>[공지 대상]</span><span th:text="${announce.targetScope}"></span>
     </div>
-    <!-- 이하 필요한 다른 필드들을 추가할 수 있습니다 -->
-
+    <div th:if="${media.imageName != null}">
+        <span>[첨부 이미지] </span><img th:src="@{/file/{imageName}(imageName=${media.imageName})}" style="height: 100px; width"/>
+    </div>
+    <div th:if="${media.fileName != null}">
+        <span>[첨부 파일]</span><a th:href="@{/file/{fileName}(fileName=${media.fileName})}" th:download="${media.fileName}" style="color: blue">[[${media.fileName}]]</a>
+    </div>
 </div>
 
 </body>
