--- a/src/main/resources/templates/announce/create_announce.html
+++ b/src/main/resources/templates/announce/create_announce.html
@@ -1,4 +1,3 @@
-<!-- createAnnounce.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -19,9 +18,7 @@
     <div th:replace="layout/header :: header"></div>
     <div>
         <h2>새로운 공지사항 생성</h2>
-        <!-- 폼 시작 -->
-        <form th:action="@{/announce/create.do}" th:method="post" th:object="${announce}">
-            <!-- Announce 속성 입력 -->
+        <form th:action="@{/announce/create.do}" th:method="post" th:object="${announce}" enctype="multipart/form-data">
             <div class="input_layout">
                 <label for="annTitle">제목</label>
                 <input type="text" id="annTitle" th:field="*{annTitle}" />
@@ -36,23 +33,17 @@
                 <label for="annPeriod">게시 기한</label>
                 <input type="datetime-local" id="annPeriod" th:field="*{annPeriod}" />
             </div>
-
-<!--            <div class="input_layout">-->
-<!--                <label for="mediaId">Media ID:</label>-->
-<!--                <input type="number" id="mediaId" th:field="*{mediaId}" />-->
-<!--            </div>-->
-
             <div class="input_layout">
                 <label for="targetScope">게시 범위</label>
                 <input type="text" id="targetScope" th:field="*{targetScope}" />
             </div>
-
-            <!-- 제출 버튼 -->
+            파일첨부
+            <input type="file" name="file" accept=".txt" multiple>
+            이미지 첨부
+            <input type="file" name="image" accept="image/*" multiple>
             <button type="submit">공지사항 생성</button>
         </form>
-        <!-- 폼 끝 -->
 
-        <!-- 다양한 필요한 내용 추가 -->
     </div>
 </body>
 </html>
