--- a/src/main/resources/templates/vote/vote_detail.html
+++ b/src/main/resources/templates/vote/vote_detail.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>투표 정보</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- Bootstrap JS and Popper.js -->
 
-<!--    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -41,6 +38,12 @@
     <div>
         <span>[기명/무기명] </span><span th:text="${vote.anonymityType}"></span>
     </div>
+    <div th:if="${media.imageName != null}">
+        <span>[첨부 이미지] </span><img th:src="@{/file/{imageName}(imageName=${media.imageName})}" style="height: 300px; width: 300px"/>
+    </div>
+    <div th:if="${media.fileName != null}">
+        <span>[첨부 파일]</span><a th:href="@{/file/{fileName}(fileName=${media.fileName})}" th:download="${media.fileName}" style="color: blue">[[${media.fileName}]]</a>
+    </div>
     <div>
         [ 총 유권자 수 ] 필요할듯
     </div>
@@ -48,7 +51,6 @@
         [ 투표 진행율 ] 필요할듯
     </div>
 
-    <!-- target대상만 볼 수 있음 -->
     <div th:if="${vote.attendanceType == '비대면' && isVoted == false && session.loginMember.deptName == vote.targetScope || session.loginMember.collegeName == vote.targetScope} ">
         <button id="voteButton">
             투표하기
@@ -69,7 +71,6 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    <!-- 찬성, 반대, 기권 선택 폼 -->
                     <form th:action="@{/vote/cast/{voteId}(voteId=${vote.voteId})}" method="post">
                         <input type="hidden" name="anonymityType" th:value="${vote.anonymityType}">
                         <div class="form-check">
@@ -90,7 +91,6 @@
             </div>
         </div>
     </div>
-<!--     대면일 경우, 작성자일경우, 투표가 아직 안끝났을 경우-->
     <div th:if="${session.loginMember.id == vote.id && vote.attendanceType == '대면'}">
         <a th:href="@{/vote/createUrl/{voteId}(voteId=${vote.voteId})}" style="color: blue">
             <span>qr코드 생성</span>
@@ -98,7 +98,6 @@
         <div th:if="${vote.qrToken != null}">
             <p>아래 QR 코드를 스캔하여 투표에 참여하세요.</p>
 
-            <!-- 투표 URL에 토큰이 포함되어 있으므로 이를 QR 코드로 표시 -->
             <div th:id="qrcode" th:attr="data-vote-url=${voteUrl}">
 
             </div>
